--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^3.0.0",
     "router": "^1.3.3",
     "rxjs": "~6.2.0",
