--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.1",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "ajv": "^6.9.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
