--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.10",
     "@angular/common": "^6.1.10",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^3.0.0",
+    "ngx-toastr": "^10.0.4",
     "router": "^1.3.3",
     "rxjs": "~6.2.0",
     "universal-router-outlet": "0.0.2",
